# AttriSense-Employee-Attrition-Prediction

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat
PPT/: AttriSense PPT.pptx
Project Report/: AttriSense-Final-Project-Report.docx
app/: __init__.py  main.py
app/components/: __init__.py  charts.py  layout.py
app/pages/: __init__.py  about.py  dataset_explorer.py  eda_dashboard.py  home.py  model_insights.py  prediction.py
app/services/: __init__.py  data_service.py  prediction_service.py
app/styles/: theme.css
app/views/: __init__.py  home.py  model_insights.py  prediction.py
configs/: config.yaml
docs/: ARCHITECTURE.md  WORKFLOW.md
models/: evaluation_results.json  selected_features.json  training_results.json
notebooks/: 01_Data_Understanding.ipynb  01_problem_understanding.ipynb  02_Data_Preprocessing.ipynb  02_dataset_understanding.ipynb  03_EDA.ipynb  03_data_cleaning.ipynb  04_Feature_Engineering.ipynb  05_Model_Training.ipynb  06_Model_Evaluation.ipynb  README.md
scripts/: clear_notebook_outputs.py  run_app.py  run_pipeline.py
src/attrisense/: __init__.py  config.py  inference.py  validation.py
src/attrisense/data/: __init__.py  cleaning.py  feature_engineering.py  features.py  loader.py  preprocessing.py
src/attrisense/models/: __init__.py  evaluation.py  metrics.py  pipelines.py  training.py
src/attrisense/utils/: __init__.py  paths.py
tests/: test_smoke.py
