[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attrisense"
version = "0.1.0"
description = "Employee attrition prediction and HR analytics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=3.0",
    "numpy>=2.0",
    "pyarrow>=24.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=6.0",
    "scikit-learn>=1.5",
    "xgboost>=3.0",
    "shap>=0.45",
    "joblib>=1.4",
    "streamlit>=1.30",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0", "ipykernel>=6.0", "pytest>=8.0", "ruff>=0.8.0"]
notebooks = ["jupyter>=1.0", "ipykernel>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
